--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,8 +9,8 @@
     <title>News Flow</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="">Your News</a>
+<nav style='height:100px;' class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a style='font-size: 65px;'class="navbar-brand" href="/">Your News</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,13 +18,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item acitve">
-          <a class="nav-link" href="{% url 'home' %}">Home</a>
+          <a  style='font-size: 35px;' class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'about' %}">About</a>
+          <a style='font-size: 35px;' class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'articles_index' %}">Articles</a>
+          <a style='font-size: 35px;' class="nav-link" href="{% url 'articles_index' %}">Articles</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -36,15 +36,14 @@
   
   <main class='container' >
     {% block content %}
+    
     {% endblock %}
 </main>
 
 
-<hr />
+
 <footer class="text-center text-white bg-primary" >
-    
     <div class="container p-4 pb-0">
-      
       <section class="">
         <p class="d-flex justify-content-center align-items-center">
           <span class="me-3">Register for free</span>
@@ -53,16 +52,10 @@
           </button>
         </p>
       </section>
-      
-    </div>
-    
-
-
+      </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright: Elaine, Akeem, Grant, Victoria!
-      
       </div>
-    
-  </footer>
+    </footer>
 </body>
 </html>
