removed str from Comment model, added delete comment function in view

--- a/main_app/templates/articles/comment_details.html
+++ b/main_app/templates/articles/comment_details.html
@@ -8,16 +8,16 @@
 
     <table class="striped">
         <thead>
-          <tr><th>Date</th><th>Meal</th></tr>
+          <tr><th>Date</th><th>Content</th></tr>
         </thead>
         <tbody>
-          
-            <tr>
+          <tr>
+              <!-- <a href="{% url 'delete_comment' article.id %}">Delete -->
               <td></td>
               <td></td>
+            </a>
             </tr>
-          
-        </tbody>
+          </tbody>
       </table>
      
 
