--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -16,10 +16,14 @@
         </thead>
         <tbody>
           {% for comment in article.comment_set.all %}
-            <tr>
+          {% csrf_token %}
+          <tr>
+          </form action="{% url 'delete_comment' article.id %}" method="DELETE">
               <td>{{comment.date}}</td>
               <td>{{comment.content}}</td>
             </tr>
+            <input type="submit" value="DELETE" class='btn-outline-dark'/>
+
           {% endfor %}
         </tbody>
       </table>
