adds signup functionality and view

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -39,6 +39,9 @@
       </li>
     {% else %}
     <li class="nav-item">
+      <a style='font-size: 35px;' class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+    </li>
+    <li class="nav-item">
       <a style='font-size: 35px;' class="nav-link" href="{% url 'login' %}">Log In</a>
     </li>
   {% endif %}
@@ -58,10 +61,9 @@
       <section class="">
         <p class="d-flex justify-content-center align-items-center">
           <span class="me-3">Register for free</span>
-          <button type="button" class="btn btn-outline-light btn-rounded">
-            Sign up!
-          </button>
-        </p>
+          
+          <a class="btn btn-outline-light btn-rounded" href="{% url 'signup' %}"" role="button">Sign Up!</a>
+          
       </section>
       </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
