--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a style='font-size: 35px;' class="nav-link" href="{% url 'articles_index' %}">Articles</a>
         </li>
+        <li class="nav-item">
+          <a style='font-size: 35px;' class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search">
