--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,32 +11,24 @@
 </head>
 <body>
 <nav style='height:100px;' class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a style='font-size: 65px;'class="navbar-brand" href="/">Your News</a>
+    <a style='font-size: 65px;'class="navbar-brand" href="/">BespokeNews</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      {% if user.is_authenticated %}
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item acitve">
           <a  style='font-size: 35px;' class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
 
-        {% if user.is_authenticated %}
         <li class="nav-item">
           <a style='font-size: 35px;' class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item">
           <a style='font-size: 35px;' class="nav-link" href="{% url 'articles_index' %}">Articles</a>
         </li>
-<<<<<<< HEAD
-        <li class="nav-item">
-          <a style='font-size: 35px;' class="nav-link" href="{% url 'logout' %}">Log Out</a>
-        </li>
-      </ul>
-=======
-     
->>>>>>> 7abdfe05050779fcd9a4fcc44dd4aff4ccb98b34
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
@@ -70,7 +62,7 @@
           <span class="me-3">Register for free</span>
           
           <a class="btn btn-outline-light btn-rounded" href="{% url 'signup' %}"" role="button">Sign Up!</a>
-          
+         
       </section>
       </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
