--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -17,21 +17,25 @@
         <tbody>
           {% for comment in article.comment_set.all %}
           <tr>
-            <form action="{% url 'delete_comment' article.id comment.id %}" method="POST">
-              {% csrf_token %}
-              <td>{{comment.date}}</td>
-              <td>{{comment.content}}</td>
-              <input type="submit" value="DELETE" class='btn-outline-dark'/>
-            </form>    
-            <a class="btn btn-outline-dark" href="{% url 'update_comment' %}"" role="button">EDIT</a>
+            <td>{{comment.date}}</td>
+            <td>{{comment.content}}</td>
+            <td>
+              <form action="{% url 'delete_comment' article.id comment.id %}" method="POST">
+                {% csrf_token %}
+                <input type="submit" value="DELETE" class='btn-outline-dark'/>
+              </form>   
+            </td> 
+            <td>
+              <form action="{% url 'update_comment' article.id comment.id %}" method="POST">
+                {{  updatecomment_form.as_p  }}
+                {% csrf_token %}
+                <input type="submit" value="EDIT" class='btn-outline-dark'/>
+              </form>   
+            </td> 
           </tr>
           {% endfor %}
         </tbody>
       </table>
       
-     
-    
-  
-
 {% endblock %}
 
