--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -11,22 +11,22 @@
     </form>
 
     <table class="striped">
+      <tbody>
         <thead>
           <tr><th>Date</th><th>Content</th></tr>
         </thead>
-        <tbody>
           {% for comment in article.comment_set.all %}
           {% csrf_token %}
           <tr>
-          </form action="{% url 'delete_comment' article.id %}" method="DELETE">
+          <form action="{% url 'delete_comment' article.id %}" method="POST">
               <td>{{comment.date}}</td>
               <td>{{comment.content}}</td>
-            </tr>
             <input type="submit" value="DELETE" class='btn-outline-dark'/>
-
+          </form>
+          </tr>
           {% endfor %}
         </tbody>
-      </table>
+    </table>
       
      
     
