--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,61 +1,8 @@
 {% extends 'base.html' %}
+
 {% block content %}
-{% load static %} 
-<div class="about-wrapper container-fluid">
-    <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-sm-6 col-12 d-flex flex-start">
-            <h1>Who We Are</h1>
-        </div>
-        <div class="col-sm-6 col-12 d-flex justify-content-center align-items-center">
-            <h5>It takes a special group of talented individuals to bright life to such project.
-                It takes passion, sleepless nights, hard work and dedication. We take pride in providing 
-                our customers with the mos up to date news and articles. Get to know the inddividuals beind
-                the masterpiece.
-            </h5>
-        </div>
-    </div>
-    <div class="team-section">
-        <div class="row first-team-row">
-            <div class="col-md-4 offset-md-0 col-12">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="{% static 'Hsu.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Akeem Dainty</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-md-4 offset-md-0 col-12">
-                <div class="card" style="width:18rem;">
-                    <img class="card-img-top" src="{% static 'Vicky.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Elaine Hsu</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
-            </div>
-        </div>
-        <div class="row second-team-row">
-            <div class="d-flex col-xl-6 offset-xl-0 col-lg-6 offset-lg-1 col-md-10 offset-md-1 col-12 justify-content-center align-items-center">
-                <div class="card">
-                    <img class="card-img-top" src="{% static 'Keemm.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Elaine Hsu</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div class="d-flex col-xl-6 offset-xl-0 col-lg-6 offset-lg-1 col-md-10 offset-md-1 col-12 justify-content-center align-items-center">
-                <div class="card">
-                    <img class="card-img-top" src="{% static 'Grantt.jpg' %}" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Elaine Hsu</h5>
-                      <p class="card-text">Senior Front-End Engineer</p>
-                    </div>
-                  </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+<h1>Your News Is Good News</h1>
+
 
 {% endblock %}
