--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -2,39 +2,66 @@
 
 {% block content %}
 {%  load static %}
+<h1>Your Good News Index</h1>
+<a href="{% url 'articles_create' %}">Add an Article</a>
 
-
-
-
-<div class="container-fluid">
-  <div class="row d-flex justify-content-center align-items-center">
-    <h1></h1>
-  </div>
-  <div class="row pb-4">
-    {% for article in articles %}
-    <a href="{% url 'articles_detail' article.id %}">
-      <div class="col-sm-4 col-12 mt-4">
+{% for article in articles %}
+  <a href="{% url 'articles_detail' article.id %}">
+      <div class="card-group">
         <div class="card">
-          <img class="card-img-top" src="{% static 'WAPO-logo.jpg' %}" alt="Card image cap">
+          <img class="card-img-top" src="{% static 'NYTimes.jpg' %}" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{ article.short_title}}</h5>
-            <p class="card-text">{{ article.long_title}}</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
-          <div class="card-footer">
-            <small class="text-muted">Written by: {{article.author}}</small>
-          </div>
+          <table class="striped">
+            <thead>
+              <tr><th>Date</th><th>Content</th></tr>
+            </thead>
+            <tbody>
+              {% for comment in article.comment_set.all %}
+                <tr>
+                  <td>{{comment.date}}</td>
+                  <td>{{comment.content}}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
           <div class="card-action">
             <a href="{% url 'articles_update' article.id %}">Edit</a>
             <a href="{% url 'articles_delete' article.id %}">Delete</a>
+        </div>
+        </a>
+        <div class="card" style="width: 18rem;">
+          <img src="{% static 'NYTimes.jpg' %}" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{article.short_title}}</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+              {% for comment in article.comment_set.all %}
+            <li class="list-group-item">{{comment.date}}</li>
+            <li class="list-group-item">{{comment.content}}</li>
+            
+            {% endfor %}
+          </ul>
+          <div class="card-body">
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
           </div>
         </div>
-      </div>
-    </a>
-    {% endfor %} 
-  </div>
-  <div class="row d-flex justify-content-center align-items-center add-article-row">
-    <a class="btn-large btn add-article" href="{% url 'articles_create' %}">Add an Article</a>
-  </div>
+        
+          <div class="card-footer">
+            <small class="text-muted">Written by: {{article.author}}</small>
+          </div>
+        </div>
+        
+      
+     
+      {% endfor %} 
 </div>
+
+
+
 
 {% endblock %}
