adds change to update comment form, excludes the date

--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -28,7 +28,7 @@
             <button type='submit' value='Edit Comment' action="{% url 'edit_comment' article.id comment.id %}" method='POST'>
               </button>
               <form action="{% url 'update_comment' article.id comment.id %}" method="POST">
-              {{  comment_form.as_p  }}
+              {{  update_form.as_p  }}
               {% csrf_token %}
               <!-- add button to execute function with dropdown to update the template -->
               <input type="submit" value="Update Comment" class='btn-outline-dark'/>
