adds final API review and searchbar fix

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -49,7 +49,7 @@
               {% csrf_token %}
               {{ form.name }}
               <i class="fal fa-search"></i>
-              <input class="form-control mr-sm-2" type="search" placeholder="">
+              <!-- <input class="form-control mr-sm-2" type="search" placeholder=""> -->
               <button type="submit" value="Search">Search</button>
             </form>
             <li class="nav-item">
